# checkpulse

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  justfile
migrations/: 0001_init.sql  0002_events_extend.sql  0003_drop_country.sql
src/: config.rs  dashboard.rs  db.rs  geo.rs  hash.rs  ingest.rs  main.rs  ua.rs
templates/: dashboard.html
